# BULLFROG

./: .gitignore  Aztec.cpp  Aztec.h  Dockerfile  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  README.md  autoDeploy.sh  aztec  aztec.1  aztec.elf  config.status  configure  configure.ac  configure~  data.txt  deb.deb  main.cpp
.deps/: Aztec.Po  main.Po
.github/workflows/: c-cpp.yml
autom4te.cache/: output.1  output.2  requests  traces.1
deb/DEBIAN/: control
tests/: Makefile  Makefile.am  aztectest1  main.cpp
tests/.deps/: main.Po
